@@ -32,11 +32,11 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.OpenOption;
 import java.nio.file.attribute.BasicFileAttributes;
-import org.apache.commons.lang.StringUtils;
 import org.apache.tools.zip.Zip64Mode;
 import org.apache.tools.zip.ZipEntry;
 import org.apache.tools.zip.ZipOutputStream;
@@ -55,21 +55,21 @@ final class ZipArchiver extends Archiver {
     private final String prefix;
 
     ZipArchiver(OutputStream out) {
-        this(out, "");
+        this(out, "", Charset.defaultCharset());
     }
 
     // Restriction added for clarity, it's a package class, you should not use it outside of Jenkins core
     @Restricted(NoExternalUse.class)
-    ZipArchiver(OutputStream out, String prefix, OpenOption... openOptions) {
+    ZipArchiver(OutputStream out, String prefix, Charset filenamesEncoding, OpenOption... openOptions) {
         this.openOptions = openOptions;
-        if (StringUtils.isBlank(prefix)) {
+        if (prefix == null || prefix.isBlank()) {
             this.prefix = "";
         } else {
             this.prefix = Util.ensureEndsWith(prefix, "/");
         }
 
         zip = new ZipOutputStream(out);
-        zip.setEncoding(System.getProperty("file.encoding"));
+        zip.setEncoding(filenamesEncoding.name());
         zip.setUseZip64(Zip64Mode.AsNeeded);
     }
 
